<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/action_camera"
            android:icon="@drawable/ic_baseline_photo_camera_24"
            android:title="@string/camera" />
        <item
            android:id="@+id/action_gallery"
            android:icon="@drawable/ic_baseline_photo_library_24"
            android:title="@string/gallery" />
        <item
            android:id="@+id/action_slide_show"
            android:icon="@drawable/ic_baseline_slideshow_24"
            android:title="@string/slide_show" />
        <item
            android:id="@+id/action_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>

    <item android:title="@string/communications">
        <menu>
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/action_send"
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/send" />
        </menu>
    </item>
</menu>